# benchmark

./: CMakeLists.txt
data/database/: generate_data.py
data/example/: generate_data.py
data/lstm/: generate_data.py
include/: database.h  lstm.h  workload.h
src/: CMakeLists.txt  workload.cpp
src/basic_loops/: example.cpp
src/database/: CMakeLists.txt  database.cpp  q1.1.cpp
src/exmaple/: CMakeLists.txt  example.cpp
src/lstm/: CMakeLists.txt  lstm.cpp  lstm_base.cpp  lstm_wave.cpp
